--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border="1" style="background-color: yellow;">
+  <thead>
+    <th>NAME</th>
+    <th>AGE</th>
+    <th>BRANCH</th>
+   
+  </thead>
+  <tbody>
+    <tr>
+      <td>Shaw</td>
+      <td>20</td>
+      <td>CSE</td>
+    </tr>
+    <tr>
+      <td>Adil</td>
+      <td>21</td>
+      <td>ESE</td>
+    </tr>
+  </tbody>
     <script type="text/javascript" src="./script.js">
 </script>
 
