--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Student Details</h2>
 	<table border="1" style="background-color: yellow;">
   <thead>
     <th>NAME</th>
