--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1" style="background-color:rgb(255, 255, 0);">
+	<table ">
   <caption>Student Details</caption>
   <tr>
     <th>NAME</th>
